# aez-evolution

./: .gitignore  Anchor.toml  Cargo.toml  DEMO-README.md  PATENT-APPLICATION.md  PITCH-DECK.md  README.md  SECURITY-PLAN.md  SUMMARY.md  demo-auto.py  demo.py  test_all.py
.github/workflows/: build.yml
dashboard/: index.html  simple-viz.html  test-leaderboard.html  test-viz.html  trust-battle.html  trust-cascade-demo.html  trust-network.html
engine/: __init__.py  agent.py  evolution.py  immune.py  narrator.py  server.py  trust.py
orchestrator/: requirements.txt  server.py  simulation.py  strategies.py
programs/aez-evolution/: Cargo.toml
programs/aez-evolution/src/: lib.rs
