[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
# Pin problematic crates to versions that don't use edition2024
blake3 = "=1.5.4"
constant_time_eq = "=0.3.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
