[package]
name = "aez-evolution"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aez_evolution"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"

# Pin crates to pre-edition2024 versions for Solana toolchain compatibility
blake3 = "=1.5.4"
constant_time_eq = "=0.3.1"

